--- a/LaTeX report/content/task_10_2.tex
+++ b/LaTeX report/content/task_10_2.tex
@@ -124,9 +124,19 @@ The stability condition for \cref{eq:lab2_discrete_system} is that all eigenvalu
 \begin{equation}\label{eq:lab2_stab_condition}
 	|\lambda_i| \leq 1, \quad \text{for } i = 1, 2, 3, 4
 \end{equation}, where $ \lambda_i $ is the i'th eigenvalue of $ \bm A_d $.
-\todo[inline]{Where is this equation from? I believe that it works, but we should either derive it or reference where we found it. ANSWER: From linsys slides, see above.} 
-Using the constant values given in the MATLAB we found the eigenvalues of $ \bm A $ to be ... \todo[inline]{Add Matlab appendix}
-\todo[inline]{find eigenvalues}
+
+Using the script in \cref{lst:lab2_eigenvalues} the eigenvalues became:
+\begin{subequations}\label{eq:lab2_eigenvalues}
+	\begin{align}
+		\lambda_1 &= 1 \\
+		\lambda_2 &= 1 \\
+		\lambda_3 &= 0.55 \\
+		\lambda_4 &= 0.55
+	\end{align}
+\end{subequations}
+All eigenvalues fulfills the requirement of \cref{eq:lab2_stab_condition}, which means our system is stable! Since two of the eigenvalues are on the unit circle (i.e. has a value of 1), our system is more specifically marginally stable. More information on this subject can be found \todo{Add cite to wikipedia}.
+
+\lstinputlisting[caption= {MATLAB code for calculating eigenvalues for $ \bm A_d $}, label = {lst:lab2_eigenvalues}]{code/calculate_eigenvals.m}
 
 \subsection{The open loop optimization problem}
 \textit{How is it formulated?}
