Add label on 10_2 experimental results section

--- a/LaTeX report/content/task_10_2.tex
+++ b/LaTeX report/content/task_10_2.tex
@@ -213,7 +213,7 @@ From the forum: Here are some questions that will help you figure out what is as
 What will happen when you have some elements that are very large compared to others in a quadratic objective function? Which consequence(s) does this have for the setup in the lab? What is the impact of the length of the control horizon (imagine that the step length, h, is fixed)?
 
 \clearpage
-\subsection{Experimental results}
+\subsection{Experimental results}\label{kap:task_10_2_experimental_results}
 \textit{Printouts of data from relevant experiments (plots).
 Discussion and analysis of the results.
 Answer 10.2.2.7 here.}
