Improve LAB2 plot
- Add optimal trajectory to the plot
- Add the flight without setpoints to show drift irrelevant of control

Unfortunately not PGF, we are using png for now...

--- a/LaTeX report/content/task_10_2.tex
+++ b/LaTeX report/content/task_10_2.tex
@@ -332,9 +332,7 @@ Discussion and analysis of the results.
 Answer 10.2.2.7 here.}
 
 \begin{figure}[h]
-    \begin{center}
-        \input{figures/LAB2_plot_1.pgf}
-    \end{center}
+	\includegraphics[width=\linewidth]{figures/LAB2_plot_1.png}
 	\caption{Results of LAB2}
 	\label{fig:LAB2_plot_1}
 \end{figure}
