Update LAB2 simulink diagram

--- a/LaTeX report/content/task_10_2.tex
+++ b/LaTeX report/content/task_10_2.tex
@@ -414,12 +414,12 @@ Nevertheless it is possible to verify the control sequence by compensating for t
 \subsection{MATLAB and Simulink}
 \subsubsection{MATLAB}
 \lstinputlisting[caption= {MATALB code for lab 2}, label={lst:lab2_matlab}]{code/lab2.m}
+\clearpage
 \subsubsection{Simulink}
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=\linewidth]{code/lab2_simulink}
+	\includegraphics[angle=90, height=180mm]{code/lab2_simulink}
 	\caption{Simulink diagram used in lab 2.}
 	\label{fig:lab2_simulink}
 \end{figure}
-\todo[inline]{Need a much better image of this.}
 \end{document}
